# fast-keycloak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: codeql.yml  tests.yml
fast_keycloak/: __init__.py  api.py  model.py
tests/: __init__.py  app.py  keycloak_postgres.yaml  realm-export.json  start_infra.sh  stop_infra.sh  test_functional.py  test_integration.py  wait_for_service.sh
